--- a/djangoproject/wordcount/templates/home.html
+++ b/djangoproject/wordcount/templates/home.html
@@ -2,7 +2,7 @@
     안녕하세요, 여기서 글자를 세세요!
 </h1>
 
-<a href="">ABOUT</a>
+<a href="{%url 'about'%">ABOUT</a>
 <form action="">
     <textarea cols="40" rows="10" name="fulltext"></textarea>
     <br>    
