--- a/model/second/blog/templates/home.html
+++ b/model/second/blog/templates/home.html
@@ -1,13 +1,40 @@
 <head>  
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
 </head>
 
+
+<body>
+    <div class="container">
+        <!-- Content here -->
+        <a class="btn btn-primary" href="#" role="button">Link</a>
+        <button class="btn btn-primary" type="submit">Button</button>
+        <input class="btn btn-primary" type="button" value="Input">
+        <input class="btn btn-primary" type="submit" value="Submit">
+        <input class="btn btn-primary" type="reset" value="Reset">
+        
+    </div>
+    <ul class="nav">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">Active</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
 {% for blog in blogs.all%}
 
-    <h1> {{blog.title}} </h1>
-    <p> {{blog.pub_date}} </p>
-    <p> {{blog.body}} </p>
-    <br><br>
-    
+<h1> {{blog.title}} </h1>
+<p> {{blog.pub_date}} </p>
+<p> {{blog.body}} </p>
+<br><br>
+
 {%endfor%}
+</body>
