--- a/model/second/blog/templates/detail.html
+++ b/model/second/blog/templates/detail.html
@@ -2,4 +2,4 @@
 <br><br>
 <h1> 제목: {{blog.title}} </h1>
 <p> 날짜 : {{blog.pub_date}} </p>
-<p> 본문 미리보기 : {{blog.body}} <a href>...more</a> </p>
+<p> 본문 미리보기 : {{blog.body}}</p>
