--- a/blogtest/makeblog/templates/home.html
+++ b/blogtest/makeblog/templates/home.html
@@ -1,4 +1,8 @@
 {% for blog in blogs.all %}
-<h1>{{ blog.title }}</h1>
-<br>
+    <div class = "container">
+        <h1>{{ blog.title }}</h1>
+        <p> {{ blog.pub_data}}</p>
+        <p> {{ blog.body }}</p>
+        <br>
+    </div>
 {% endfor %}
