--- a/blogtest/makeblog/templates/home.html
+++ b/blogtest/makeblog/templates/home.html
@@ -2,7 +2,7 @@
     <div class = "container">
         <h1>{{ blog.title }}</h1>
         <p> {{ blog.pub_data}}</p>
-        <p> {{ blog.body }}</p>
+        <p> {{ blog.summary }}</p>
         <br>
     </div>
 {% endfor %}
