--- a/blogtest/makeblog/templates/home.html
+++ b/blogtest/makeblog/templates/home.html
@@ -4,5 +4,6 @@
         <p> {{ blog.pub_data }}</p>
         <p> {{ blog.summary }}</p>
         <br>
+        <a href="{% url 'detail' %}">...more</a>
     </div>
 {% endfor %}
