--- a/blogtest/makeblog/templates/detail.html
+++ b/blogtest/makeblog/templates/detail.html
@@ -47,5 +47,10 @@
 
 
 <body>
-    {{ details.body }}
+    <div class="container">
+        <br><br>
+        <h1>{{details.title}}</h1>
+        <p>{{details.pub_date}}</p>
+        <p>{{details.body}}</p>
+    </div>
 </body>
