--- a/blogtest/makeblog/templates/detail.html
+++ b/blogtest/makeblog/templates/detail.html
@@ -45,22 +45,14 @@
 
 <h1>자세한 내용을 알려주는 페이지 입니다.</h1>
 
-
-<div class="card">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
-    </div>
-</div>
-
 <body>
-    <div class="container">
-        <br><br>
-        <h1>{{details.title}}</h1>
-        <p>{{details.pub_data}}</p>
-        <p>{{details.body}}</p>
-    </div>
+    <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">{{details.title}}</h5>
+          <h6 class="card-subtitle mb-2 text-muted">{{details.pub_data}}</h6>
+          <p class="card-text">{{details.body}}</p>
+          <a href="#" class="card-link">Card link</a>
+          <a href="#" class="card-link">Another link</a>
+        </div>
+    </div>    
 </body>
