--- a/blogtest/makeblog/templates/home.html
+++ b/blogtest/makeblog/templates/home.html
@@ -44,11 +44,11 @@
 
 
 {% for blog in blogs.all %}
-    <div class = "container">
-        <h1>{{ blog.title }}</h1>
-        <p> {{ blog.pub_data }}</p>
-        <p> {{ blog.summary }}</p>
-        <br>
-        <a href="{% url 'detail' blog.id %}">...more</a>
-    </div>
+<div class="card">
+  <div class="card-body">
+    <h5 class="card-title">{{blog}.title}}</h5>
+    <h6 class="card-subtitle mb-2 text-muted">{{blog.pub_data}}</h6>
+    <p class="card-text">{{blog.summary}}</p>
+  </div>
+</div>  
 {% endfor %}
