--- a/blogtest/makeblog/templates/home.html
+++ b/blogtest/makeblog/templates/home.html
@@ -44,11 +44,15 @@
 
 
 {% for blog in blogs.all %}
-<div class="card">
-  <div class="card-body">
-    <h5 class="card-title">{{blog}.title}}</h5>
-    <h6 class="card-subtitle mb-2 text-muted">{{blog.pub_data}}</h6>
-    <p class="card-text">{{blog.summary}}</p>
-  </div>
-</div>  
+<div class="container">
+  <div class="card">
+    <div class="card-body">
+      <h5 class="card-title">{{blog.title}}</h5>
+      <h6 class="card-subtitle mb-2 text-muted">{{blog.pub_data}}</h6>
+      <p class="card-text">{{blog.summary}}</p>
+      <a href="{% url 'detail' blog.id %}" class="card-link">...more</a>  
+    </div>
+  </div>    
+  <br><br>
+</div>
 {% endfor %}
