--- a/blogtest/makeblog/templates/new.html
+++ b/blogtest/makeblog/templates/new.html
@@ -45,7 +45,7 @@
 
 
 <div class="container">
-    <form action="">
+    <form action="{% url 'create' %}">
         <h4>제목: </h4>
         <input type='text' name='title'>
         <br>
