--- a/03. blogtest/account/templates/signup.html
+++ b/03. blogtest/account/templates/signup.html
@@ -2,7 +2,23 @@
 
 {% block contents %}
 
-<iv class = 'container'>
+<div class = 'container'>
 
-    
+<h1> Sign up! </h1>
+
+<form methon ='POST' action="{% url 'signup' %}">
+    {% csrf_token %}
+    Username: 
+    <br>
+    <input name='username' type='text' value="">
+    <br>
+    Password:
+    <br>
+    <input name='password1' type='password' value=''>
+    <br>
+    Confirm Password:
+    <br>
+    <input name='password2' type='password' value=''>
+
+</form>
 </div>
