--- a/03. blogtest/blogtest/templates/base.html
+++ b/03. blogtest/blogtest/templates/base.html
@@ -25,7 +25,8 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="{% url 'portfolio' %}">Portfolio</a>
-            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="{% url 'signup' %}">회원가입</a>
+            <a class="dropdown-item" href="{% url 'login' %}">Login</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
