--- a/03. blogtest/account/templates/login.html
+++ b/03. blogtest/account/templates/login.html
@@ -2,9 +2,24 @@
 
 {% block contents %}
 
-<iv class = 'container'>
+<div class = 'container'>
 
+<h1> Login</h1>
 
+<form method ='POST' action="{% url 'login' %}">
+    {% csrf_token %} <!-- 보안을 위해 써주는 난수 발생기(CSRF 공격 방어)-->
+    Username: 
+    <br>
+    <input name='username' type='text' value="">
+    <br>
+    Password:
+    <br>
+    <input name='password1' type='password' value=''>
+    <br>
+    <br>
+    <input class='btn btn-primary' type='submit' value='Login!'>
+    
+</form>
 </div>
 
 {% endblock %}
