--- a/03. blogtest/blogtest/templates/base.html
+++ b/03. blogtest/blogtest/templates/base.html
@@ -27,6 +27,7 @@
             <a class="dropdown-item" href="{% url 'portfolio' %}">Portfolio</a>
             <a class="dropdown-item" href="{% url 'signup' %}">회원가입</a>
             <a class="dropdown-item" href="{% url 'login' %}">Login</a>
+            <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
