--- a/03. blogtest/account/templates/login.html
+++ b/03. blogtest/account/templates/login.html
@@ -14,11 +14,10 @@
     <br>
     Password:
     <br>
-    <input name='password1' type='password' value=''>
+    <input name='password' type='password' value=''>
     <br>
     <br>
     <input class='btn btn-primary' type='submit' value='Login!'>
-    
 </form>
 </div>
 
