--- a/03. blogtest/makeblog/templates/home.html
+++ b/03. blogtest/makeblog/templates/home.html
@@ -3,7 +3,8 @@
 {% block contents %}
 <body>  
 
-{% for blog in blogs.all %}
+{% for blog in posts %}
+
 <div class="container">
   <div class="card">
     <div class="card-body">
