--- a/03. blogtest/makeblog/templates/home.html
+++ b/03. blogtest/makeblog/templates/home.html
@@ -19,7 +19,7 @@
 {% endfor %}
 
 <div class = 'container'>
-  {% if post.has_previous %}
+  {% if posts.has_previous %}
   <a href="?page=1">First</a>
   <a href="?page={{posts.previous_page_number}}">Previous</a>
   {%endif%}
