--- a/03. blogtest/makeblog/templates/home.html
+++ b/03. blogtest/makeblog/templates/home.html
@@ -31,6 +31,7 @@
   {%if posts.has_next %}
   <a href="?page={{posts.next_page_number}}">Next</a>
   <a href='?page={{posts.paginator.num_pages}}'>Last</a>
+  {%endif%}
 </div>
 
 </body>
