--- a/03. blogtest/makeblog/templates/new.html
+++ b/03. blogtest/makeblog/templates/new.html
@@ -6,7 +6,8 @@
     <form method="POST">
     {% csrf_token %}
     <tabel>
-        {{form.as_tabel}}
+        {{form.as_table}}
+        <br>
     </tabel>
     <br>
         <input class = 'btn btn-dark' type='submit' value='제출하기'>
