--- a/03. blogtest/makeblog/templates/new.html
+++ b/03. blogtest/makeblog/templates/new.html
@@ -1,14 +1,13 @@
 {% extends 'base.html' %}
 
 {% block contents %}
-
+<br>
 <div class = 'container'>
     <form method="POST">
     {% csrf_token %}
-    <tabel>
+    <table>
         {{form.as_table}}
-        <br>
-    </tabel>
+    </table>
     <br>
         <input class = 'btn btn-dark' type='submit' value='제출하기'>
     </form>
