--- a/03. blogtest/social_login/templates/social_home.html
+++ b/03. blogtest/social_login/templates/social_home.html
@@ -2,7 +2,24 @@
 
 {% block contents %}
 
-<h1> hi </h1>
+{% load socialacount %}
+{% providers_media_js %}
 
+<h1> hello world!! </h1>
+
+<a href='/socialaccounts/signup'> 회원가입 </a> <br>
+
+{% if user.is_authenticated %}
+
+<a href = '/socialaccounts/logout'> 로그아웃 </a><br>
+
+{{user.username}} 님이 로그인 중
+
+{% else %}
+<a href= " {% provider_login_url 'google' %} "> 구글 로그인</a><br>
+
+당신 로그인 해야뎀
+
+{% else %}
 
 {% endblock %}
