--- a/03. blogtest/social_login/templates/social_home.html
+++ b/03. blogtest/social_login/templates/social_home.html
@@ -2,16 +2,16 @@
 
 {% block contents %}
 
-{% load socialacount %}
+{%load socialaccount %}
 {% providers_media_js %}
 
 <h1> hello world!! </h1>
 
-<a href='/socialaccounts/signup'> 회원가입 </a> <br>
+<a href="/social_account/signup"> 회원가입 </a> <br>
 
 {% if user.is_authenticated %}
 
-<a href = '/socialaccounts/logout'> 로그아웃 </a><br>
+<a href = "/social_account/logout"> 로그아웃 </a><br>
 
 {{user.username}} 님이 로그인 중
 
@@ -20,6 +20,6 @@
 
 당신 로그인 해야뎀
 
-{% else %}
+{% endif %}
 
 {% endblock %}
