--- a/04.social_api/blog/templates/home.html
+++ b/04.social_api/blog/templates/home.html
@@ -14,4 +14,16 @@
 당신 로그인 해야댐
 
 {% endif %}
+<br><br>
+{% for blog in blog.all %}
+
+<img src = '{{blog.image.url}}' width=500>
+<br>
+{{blog.text}}
+<br><br>
+
+<img src = "{{blog.image_thumbnail.url}}">
+{% endfor %}
+
+
 
