--- a/burok/viewcrud/templates/viewcrud/index.html
+++ b/burok/viewcrud/templates/viewcrud/index.html
@@ -4,5 +4,5 @@
 <body>
     <h1> CRUD 방식 </h1>
 
-    <a href> Function Based CRUD</a><br>
+    <a href = "{% url 'home' %}"> Function Based CRUD</a><br>
 </body>
