--- a/burok/viewcrud/templates/viewcrud/funccrud.html
+++ b/burok/viewcrud/templates/viewcrud/funccrud.html
@@ -2,6 +2,10 @@
     <title>crud practice</title>
 </head>
 <body>
+    <!-- 글쓰기 링크(버튼) -->
+    <a href="{% url '' %} "> 글쓰기 </a>
+
+    <!--블로그 글을 띄우는 부분-->
     {% for blog in blogs %}
         <h2> {{blog.title}} </h2>
         <p> {{blog.body}} </p>
