--- a/burok/viewcrud/templates/viewcrud/funccrud.html
+++ b/burok/viewcrud/templates/viewcrud/funccrud.html
@@ -3,7 +3,7 @@
 </head>
 <body>
     <!-- 글쓰기 링크(버튼) -->
-    <a href="{% url '' %} "> 글쓰기 </a>
+    <a href="{% url 'newblog' %} "> 글쓰기 </a>
 
     <!--블로그 글을 띄우는 부분-->
     {% for blog in blogs %}
