--- a/burok/viewcrud/templates/viewcrud/funccrud.html
+++ b/burok/viewcrud/templates/viewcrud/funccrud.html
@@ -8,6 +8,7 @@
     <!--블로그 글을 띄우는 부분-->
     {% for blog in blogs %}
         <h2> {{blog.title}} </h2>
+        <p> {{blog.pub_data}}
         <p> {{blog.body}} </p>
 
         <hr>
