--- a/burok/viewcrud/templates/viewcrud/funccrud.html
+++ b/burok/viewcrud/templates/viewcrud/funccrud.html
@@ -8,9 +8,10 @@
     <!--블로그 글을 띄우는 부분-->
     {% for blog in blogs %}
         <h2> {{blog.title}} </h2>
-        <p> {{blog.pub_data}}
+        <p> {{blog.pub_data}} </p>
         <p> {{blog.body}} </p>
-
+        <a href = "{% url '' %}"> 수정 </a>
+        <a href = "{% url 'delete' %}"> 삭제 </a>
         <hr>
     {% endfor %}
 </body>
