--- a/burok/classcrud/templates/classcrud/classblog_list.html
+++ b/burok/classcrud/templates/classcrud/classblog_list.html
@@ -13,3 +13,6 @@
     <a href="{% url 'detail' blog.id %}"> 자세히 보기</a><br>
     <a href="{% url 'change' blog.id %}"> 수정</a><br>
     <a href="{% url 'del' blog.id %}"> 삭제</a><br>
+
+    <hr>
+{% endfor %}
