--- a/burok/classcrud/templates/classcrud/classblog_detail.html
+++ b/burok/classcrud/templates/classcrud/classblog_detail.html
@@ -4,6 +4,6 @@
 
 <h1> 본문 자세히 보기 페이지</h1>
 <hr>
-<h2> 제목 : {{object.title}} </h2>
-<h4> 날짜 : {{object.created_at}} </h4>
-본문 : {{object.body}}
+<h2> 제목 : {{blogpost.title}} </h2>
+<h4> 날짜 : {{blogpost.created_at}} </h4>
+본문 : {{blogpost.body}}
