--- a/burok/classcrud/templates/classcrud/list.html
+++ b/burok/classcrud/templates/classcrud/list.html
@@ -6,7 +6,7 @@
 
 <br>
 
-{% for blog in object_list %}
+{% for blog in blog_list %}
     <h2> {{blog.title}} </h2>
     <h5> {{blog.created_at}} </h5>
     <p> {{blog.body}} </p>
