--- a/burok/viewcrud/templates/viewcrud/index.html
+++ b/burok/viewcrud/templates/viewcrud/index.html
@@ -5,4 +5,5 @@
     <h1> CRUD 방식 </h1>
 
     <a href = "{% url 'home' %}"> Function Based CRUD</a><br>
+    <a href = '{% url 'list' %}'> Class Based CRUD</a>
 </body>
