--- a/03. blogtest/social_login/templates/social_home.html
+++ b/03. blogtest/social_login/templates/social_home.html
@@ -1,25 +1,46 @@
-
 {% extends 'base.html' %}
-
 {% block contents %}
 {% load socialaccount %}
 {% providers_media_js %}
 
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+    <title>간단한 지도 표시하기</title>
+    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=xvf78nbr9v"></script>
+</head>
+<body>
+
 <h1> hello world!! </h1>
-
 <a href="/social_account/signup"> 회원가입 </a> <br>
-
+    
 {% if user.is_authenticated %}
-
+    
 <a href = "/social_account/logout"> 로그아웃 </a><br>
-
+    
 {{user.username}} 님이 로그인 중
-
+    
 {% else %}
 <a href= " {% provider_login_url 'google' %} "> 구글 로그인</a><br>
-
+    
 당신 로그인 해야뎀
-
+    
 {% endif %}
+
+<div id="map" style="width:100%;height:400px;"></div>
+
+<script>
+var mapOptions = {
+    center: new naver.maps.LatLng(37.3595704, 127.105399), <!-- 위도와 경도-->
+    zoom: 10 <!-- 얼마나 줌 할지-->
+};
+
+var map = new naver.maps.Map('map', mapOptions);
+</script>
+</body>
+</html>
 
 {% endblock %}
