--- a/03. blogtest/social_login/templates/social_home.html
+++ b/03. blogtest/social_login/templates/social_home.html
@@ -30,15 +30,23 @@
     
 {% endif %}
 
-<div id="map" style="width:100%;height:400px;"></div>
+<div id="map" style="width:50%;height:200px;"></div>
+<br>
+<div id="map2" style="width:50%;height:200px;"></div>
 
 <script>
 var mapOptions = {
-    center: new naver.maps.LatLng(37.3595704, 127.105399), <!-- 위도와 경도-->
-    zoom: 10 <!-- 얼마나 줌 할지-->
+    center: new naver.maps.LatLng(37.3595704, 127.105399), 
+    zoom: 12
 };
-
 var map = new naver.maps.Map('map', mapOptions);
+
+var mapOptions2 = {
+    center: new naver.maps.LatLng(37.3595704, 127.105399), 
+    zoom: 12
+};
+var map2 = new naver.maps.Map('map2', mapOptions);
+
 </script>
 </body>
 </html>
