--- a/03. blogtest/social_login/templates/social_home.html
+++ b/03. blogtest/social_login/templates/social_home.html
@@ -30,10 +30,8 @@
     
 {% endif %}
 
-<div id="map" style="width:50%;height:200px;"></div>
+<div id="map" style="width:100%;height:400px;"></div>
 <br>
-<div id="map2" style="width:50%;height:200px;"></div>
-
 <script>
 var mapOptions = {
     center: new naver.maps.LatLng(37.3595704, 127.105399), 
@@ -41,12 +39,40 @@ var mapOptions = {
 };
 var map = new naver.maps.Map('map', mapOptions);
 
-var mapOptions2 = {
-    center: new naver.maps.LatLng(37.3595704, 127.105399), 
-    zoom: 12
-};
-var map2 = new naver.maps.Map('map2', mapOptions);
+var HOME_PATH = window.HOME_PATH || '.';
 
+var cityhall = new naver.maps.LatLng(37.700766,126.900548),
+    map = new naver.maps.Map('map', {
+        center: cityhall.destinationPoint(0, 500),
+        zoom: 15
+    }),
+    marker = new naver.maps.Marker({
+        map: map,
+        position: cityhall
+    });
+
+var contentString = [
+        '<div class="iw_inner">',
+        '   <h3>내가 원하는 주소</h3>',
+        '   <p>경기도 고양시 덕양구 고양동 현대아파트<br />',
+        '       우리집',
+        '   </p>',
+        '</div>'
+    ].join('');
+
+var infowindow = new naver.maps.InfoWindow({
+    content: contentString
+});
+
+naver.maps.Event.addListener(marker, "click", function(e) {
+    if (infowindow.getMap()) {
+        infowindow.close();
+    } else {
+        infowindow.open(map, marker);
+    }
+});
+
+infowindow.open(map, marker);
 </script>
 </body>
 </html>
